# bepuvy-sys

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
Bepuvy/: Bepuvy.sln  nuget.config
Bepuvy/Bepuvy/: Bepuvy.csproj  Entry.cs  Entrypoint.Buffers.cs  Entrypoint.Simulation.cs  Entrypoint.cs  Entrypoint_Shapes.cs  InstanceDirectory.cs  InstanceDirectroy.cs  InstanceHandle.cs  MathInterop.cs  NarrowPhaseCallbacks.cs  PoseIntegratorCallbacks.cs
Bepuvy/Bepuvy/Callbacks/: NarrowPhaseCallbacks.cs  PoseIntegratorCallbacks.cs  SolveDescriptionInterop.cs
Bepuvy/Bepuvy/Entrypoint/: Entrypoint.BufferPools.cs  Entrypoint.Shapes.cs  Entrypoint.Simulation.cs  Entrypoint.ThreadDispatcher.cs  Entrypoint.cs
Bepuvy/Generator/: Generator.cs  Generator.csproj  InstanceDirectory.cs  InstanceHandle.cs
examples/: basic.rs
headers/: BepuPhysics.h  InteropMath.h  Utilities.h
include/: BepuPhysics.h  BepuPhysics.hpp  Collisions.h  Constraints.h  Continuity.h  InteropMath.h  PoseIntegration.h  Utilities.h
src/: bindings.rs  bodies.rs  collisions.rs  constraints.rs  handles.rs  lib.rs  poses.rs  tests.rs
src/bepu/: bodies.rs  buffer_pool.rs  collidable_property.rs  collisions.rs  constraints.rs  continuity.rs  dispatcher.rs  functions.rs  handles.rs  interop_math.rs  math.rs  mod.rs  pose.rs  pose_integration.rs  shapes.rs  statics.rs  tree.rs
src/bepu/simulation/: mod.rs
src/ffi/: buffer_pool.rs  dispatcher.rs  mod.rs  shapes.rs  simulation.rs  utils.rs
src/types/: body.rs  ccd.rs  collisions.rs  handles.rs  mod.rs  shapes.rs  simulation.rs  statics.rs  utilities.rs
(+6 files in other folders)
