[package]
name = "bepuvy-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
walkdir = "2.3.3"


[build-dependencies]
bindgen = "0.65.1"
walkdir = "2.3.3"
directories = "5.0.1"
